<resources>
    <string name="by">by JAPL</string>
    <string name="app_name">IOTHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Devices IOT</string>
    <string name="nav_header_subtitle">alejandroparral@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_alert">Alert</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_device">Device</string>
    <string name="menu_add_device">Add device</string>
    <string name="menu_connection">Connection</string>

    <string name="title_alerts">Alerts</string>
    <string name="title_devices">Devices</string>
    <string name="title_device">Device</string>
    <string name="title_add_device">Add device</string>
    <string name="title_connection">Connection</string>

    <string name="device_name">Device name</string>
    <string name="input_name">Input name</string>
    <string name="input_email">Input Email</string>
    <string name="input_token_conection">Input Token Connection</string>

    <string name="information_location">Information location</string>
    <string name="input_location">Input location</string>
    <string name="name_user">Name</string>
    <string name="email">Email</string>
    <string name="token_connection">Tokenn Connection</string>

    <string name="image_select">Image select</string>

    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>

    <string name="msg_info_connection_was_added_successfull">Information was added successfully</string>
    <string name="msn_info_connection_was_updated_successfull">Information was updated successfully</string>
    <string name="msn_err_connection_was_failed">Information cann\'t input</string>
    <string name="msn_info_connection_wasnt_updated_successfull">Information wasn\'t updated</string>

    <string name="item_device_name">Item device name</string>
    <string name="item_device_location">Item device location</string>

    <string name="item_menu_about">About</string>
    <string name="device_iot_description">APP Device IOT was created to management some device. the Devices was develop over arduino that it get data that is getting the sensors</string>
    <string name="button_edit_device">Edit</string>

    <string name="records">Records</string>
</resources>