<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/side_nav_bar"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_launcher_add_device_background"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:srcCompat="@drawable/ic_launcher_foreground"
                tools:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_title"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_subtitle"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="monospace"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/device_iot_description"
            android:textAlignment="center"
            android:textColor="#141519"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
